# nyc-taxi

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  stats.json
.github/workflows/: lint-ruff.yml  publish-kedro-viz.yml
api/: deploy-viz-metadata  main
api/nodes/: 02897e9d  070c8a7b  0b919c1f  0dee4ab5  12468ace  1634fd51  18294727  18a0d458  1c3aff01  1f3cbd76  2521122d  27e06b17  2bce42b3  2f8eb562  371064e5  3b4d6834  3ba46036  4300c6c7  43557ab3  452980aa  491a8f10  4a1da0fb  55fcf3fe  57735dd4  580ae6c5  5acb456e  5da7f3d4  641799d8  64ee8b10  6a92a1d5  708c7525  72e32a4a  758ec78f  761d7c9b  7bb57e7c  81ab3cd5  825ddefd  926ce67c  92739a6f  92f0977b  (+39 more)
api/pipelines/: __default__  data_engineering  data_science  model_evaluation  model_inference  prepare_for_dashboard
conf/base/: catalog.yml  parameters.yml  parameters_data_engineering.yml  parameters_data_science.yml  parameters_model_evaluation.yml  parameters_model_inference.yml  parameters_prepare_for_dashboard.yml
notebooks/: 1.0-analyze-data.ipynb  1.1-log-data-to-googlecloud.ipynb  1.2-log-data-to-hopswroks.ipynb  2.0-model-simple.ipynb  2.1-model-hgbr.ipynb  3.0-test-for-app.ipynb
src/dashboard/: Home.py  dashboard_taxi.py
src/dashboard/pages/: 1_Dataset.py  2_Plot_maps.py
src/nyc_taxi/: __init__.py  __main__.py  settings.py
src/nyc_taxi/pipelines/data_engineering/: __init__.py  download_data.py  feature_store.py  nodes.py  pipeline.py
src/nyc_taxi/pipelines/data_science/: feature_engineering.py  log_mlflow.py  log_model.py  nodes.py  pipeline.py
(+13 files in other folders)
